--- a/04_Challenges/cv-styling-master/public/style2/style.css
+++ b/04_Challenges/cv-styling-master/public/style2/style.css
@@ -105,7 +105,8 @@
                     float: right;
                     margin-left: -28px;
             }
-
+            
+            
             #experiences,#education{
                     display: inline-grid;
                     grid-template-columns: auto auto ;
@@ -116,6 +117,11 @@
                     grid-row: 1/3;         
                     border-right: 1px solid black;
                     padding-right:15px;
+                }
+
+            
+                .experience-date-separator{
+                    color: rgb(2, 126, 126);
                 }
 
             #education>h3{
@@ -199,7 +205,7 @@
                     width: 5vw;
                     height: 5vw;
             }
-
+          
 
             @media only screen and (max-width: 600px) {
 
